--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <ul class="fl-container partners wrapper lst-reset">
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <svg class="svg-logo" role="image" width="260" height="100">
+          <svg class="svg-logo" width="260" height="100">
             <image class="with-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-1-jpg.jpg" filter="url(#grayscale)">
             </image>
             <image class="without-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-1-jpg.jpg">
@@ -320,7 +320,7 @@
       </li>
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <svg class="svg-logo" role="image" width="260" height="100">
+          <svg class="svg-logo" width="260" height="100">
             <image class="with-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-2-jpg.jpg" filter="url(#grayscale)">
             </image>
             <image class="without-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-2-jpg.jpg">
@@ -330,7 +330,7 @@
       </li>
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <svg class="svg-logo" role="image" width="260" height="100">
+          <svg class="svg-logo" width="260" height="100">
             <image class="with-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-3-jpg.jpg" filter="url(#grayscale)">
             </image>
             <image class="without-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-3-jpg.jpg">
@@ -340,7 +340,7 @@
       </li>
       <li class="partners-item">
         <a class="partner-link" href="#">
-          <svg class="svg-logo" role="image" width="260" height="100">
+          <svg class="svg-logo" width="260" height="100">
             <image class="with-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-4-jpg.jpg" filter="url(#grayscale)">
             </image>
             <image class="without-filter" width="260" height="100" preserveAspectRatio="xMidYMid slice" xlink:href="img/logo-4-jpg.jpg">
